// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`logInUser returns actions dispatches login failure with incorrect creds 1`] = `
Array [
  Object {
    "payload": "fetch is not defined",
    "type": "LOG_IN_FAILED",
  },
]
`;

exports[`logInUser returns actions dispatches login success with token 1`] = `
Array [
  Object {
    "payload": "fetch is not defined",
    "type": "LOG_IN_FAILED",
  },
]
`;

exports[`updateUser returns actions handles empty name 1`] = `
Object {
  "payload": Object {
    "name": "",
  },
  "type": "UPDATE_USER",
}
`;

exports[`updateUser returns actions handles empty object 1`] = `
Object {
  "payload": Object {},
  "type": "UPDATE_USER",
}
`;

exports[`updateUser returns actions updates the user 1`] = `
Object {
  "payload": Object {
    "name": "abcd k",
  },
  "type": "UPDATE_USER",
}
`;
